# manga-manager-v4

./: .gitignore  index.html  package.json  vite.config.ts
.github/workflows/: build.yml
src/: App.vue  main.ts  router.ts  style.css  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/archive/: mod.rs  rar_reader.rs  zip_reader.rs
src-tauri/src/cache/: image_cache.rs  mod.rs  thumbnail.rs
src-tauri/src/commands/: config_cmd.rs  eh_api.rs  library.rs  metadata.rs  mod.rs  reader.rs  thumbnail.rs
src-tauri/src/config/: mod.rs
src-tauri/src/db/: mod.rs  models.rs  schema.rs
src-tauri/src/eh/: batch.rs  client.rs  mod.rs  retry.rs
src/stores/: main.ts
src/views/: DetailView.vue  LibraryView.vue  ReaderView.vue
