[package]
name = "manga-manager-v4"
version = "0.1.1"
edition = "2021"

[lib]
name = "manga_manager_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
zip = "2"
unrar = "0.5"
image = "0.25"
reqwest = { version = "0.12", features = ["json", "cookies", "rustls-tls"], default-features = false }
tokio = { version = "1", features = ["full"] }
sha2 = "0.10"
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
regex = "1"
dirs = "5"
log = "0.4"
env_logger = "0.11"
thiserror = "1"
natord = "1"